Update tests for redirect with encryption